--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,19 @@ textarea {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -95,6 +108,8 @@ textarea {
 
 .content-wrapper {
   outline: 3px dotted red;
+  width: 90%;
+  margin: 50px 0;
 }
 
 /* ------------------- Base Header - Footer Styles --------------------*/
@@ -104,6 +119,7 @@ textarea {
 header {
   display: flex;
   justify-content: center;
+  padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -111,11 +127,23 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
+}
+
+header .header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
+}
+
+header nav {
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
 
 
@@ -126,6 +154,18 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+footer .content-wrapper {
+  width: 55%;
+}
+
+footer .contact {
+  margin-bottom: 50px;
+}
+
+footer p {
+  margin: 0;
 }
 
 footer .social-icons {
@@ -140,6 +180,9 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .copyright {
+  margin: 20px 0;
+}
 
 /* -------------------- Mobile Styles -------------------- */
 
@@ -154,6 +197,10 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
 }
+
+.hero-area .content-wrapper {
+}
+
 
 
 /* Aside */
@@ -171,6 +218,10 @@ aside {
   justify-content: center;
 }
 
+.features h2 {
+  margin-bottom: 60px;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
@@ -178,8 +229,17 @@ aside {
   flex-flow: row wrap;
 }
 
-article {
+.features article {
+  width: 63%;
+  padding: 30px 0;
+}
 
+.features p {
+  margin: 0;
+}
+
+.features .fontawesome-icon {
+  padding-bottom: 40px;
 }
 
 
@@ -189,6 +249,20 @@ article {
   display: flex;
   justify-content: center;
 }
+
+.reviews .content-wrapper {
+  
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  padding: 20px 0;
+}
+
 
 
 
@@ -206,9 +280,21 @@ article {
 
 /* Contact */
 
-.contact-secion {
+.contact-section {
   display: flex;
   justify-content: center;
+}
+
+.contact-content p {
+  margin: 0;
+}
+
+.contact-section h2 {
+ 
+}
+
+.contact-section h4 {
+
 }
 
 
@@ -227,12 +313,38 @@ article {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
+}
+
+.faq h2 {
+  padding-bottom: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;
 }
 
 
 
-
 /* UNPLUGGED site ends ==================================================== */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ==========================================================================
