--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ textarea {
    UNPLUGGED site
    ========================================================================== */
 
-   /* General Styles */
+   /* Global Styles */
  
 html {
 	font-size: 1rem;
@@ -116,6 +116,7 @@ body {
  font-family: 'Open Sans', sans-serif;
  font-size: 1em;
  color: #e2e3ed;
+ text-align: left;
 }
  
 ul, 
@@ -151,11 +152,11 @@ p {
 }
  
 img {
- width: 60%;
+ width: 100%;
 }
  
 figure {
- 
+ margin: 0;
 }
  
 address {
@@ -187,9 +188,8 @@ header .content-wrapper {
   margin: 0;
 }
 
-header a {
-  display: flex;
-  justify-content: center;
+header figure {
+  width: 60%;
 }
 
 header .header-divider {
@@ -269,17 +269,14 @@ footer .copyright {
   background: url("../img/unplugged-retreat.jpg");
   background-size: cover;
   background-position: center;
-  height: 505px;
+  min-height: 500px;
 }
 
-.hero-area .content-wrapper {
-
-}
-
-h1 {
+.hero-area h1 {
   font-size: 2.25em;
-  line-height: 43px;
+  line-height: 1.2;
   font-weight: 500;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
 }
 
 
@@ -290,6 +287,32 @@ aside {
   display: flex;
   justify-content: center;
   background-color: #527158;
+}
+
+aside .form {
+  margin-top: 30px;
+}
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 
@@ -339,22 +362,18 @@ aside {
 
 .reviews h2 {
   margin-bottom: 40px;
-  line-height: 30px;
+  line-height: 1;
 }
 
 .reviews h3 {
   width: 55%;
-  padding: 20px 0;
+  padding: 10px 0;
 }
-
-
 
 
 /* ==========================================================================
    About page
    ========================================================================== */
-
-/* Mission */ 
 
 .mission {
   display: flex;
@@ -362,8 +381,21 @@ aside {
   background-color: #527158;
 }
 
+.map figure {
+  position: relative;
+  padding-bottom: 125%;
+  height: 0;
+  width: 100%;
+  overflow: hidden;
+}
 
-/* Contact */
+.map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .contact-section {
   display: flex;
@@ -374,15 +406,6 @@ aside {
 .contact-content p {
   margin: 0;
 }
-
-.contact-section h2 {
- 
-}
-
-.contact-section h4 {
-
-}
-
 
 
 /* ==========================================================================
@@ -404,9 +427,9 @@ aside {
 }
 
 .faq h2 {
-  padding-bottom: 15px;
-  line-height: 30px;
-  margin-top: 0;
+  margin-bottom: 40px;
+  line-height: 1;
+ 
 }
 
 .faq-content {
@@ -414,36 +437,7 @@ aside {
 }
 
 .faq-content h4 {
-  line-height: 24px;
-}
-
-
-/* Form Styles */
-
-aside .form {
-  margin-top: 30px;
-}
- 
-input[type=text] {
-  box-sizing: border-box;
-  width: 100%;
-  color: #2a423a;
-  font-style: italic;
-  padding: 1em;
-}
- 
-input[type=button] {
-  width: 100%;
-  padding: 20px 0;
-  margin-top: 20px;
-  background-color: #2a423a;
-  font-family: 'Poppins', Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  font-size: 1.125em;
-  color: #e2e3ed;
-  border: none;
-  text-align: center;
-  text-transform: uppercase;
+  line-height: 1.333;
 }
 
 
@@ -561,7 +555,7 @@ h2 {
 
 h3 {
   font-size: 1.5em;
-  line-height: 30px;
+  line-height: 1.25;
 }
 
 h4 {
@@ -580,10 +574,8 @@ header .content-wrapper {
   flex-flow: row nowrap;
 }
 
-header .content-wrapper a {
-  display: flex;
-  justify-content: flex-start;
-  width: 55%;
+header figure {
+  width: 30%;
 }
 
 header nav {
@@ -640,14 +632,32 @@ aside .content-wrapper .form-description {
   width: 50%;
 }
 
+
 /* Reviews */
+
+
+.reviews h2 {
+  width: 80%;
+}
+
+.reviews figure {
+  width: 50%;
+}
+
 .reviews article {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .reviews article div {
   width: 49%;
+}
+
+.reviews h3 {
+  width: 100%;
+  margin: 0;
+  padding-bottom: 0;
 }
 
 
@@ -777,6 +787,10 @@ header .content-wrapper a {
   width: 45%;
 }
 
+header figure {
+  width: 30%;
+}
+
 
 /* Hero Area */
 
@@ -816,11 +830,16 @@ aside .content-wrapper .form-description {
 /* Reviews */
 
 .reviews {
-  height: 580px;
+  height: 645px;
 }
 
 .reviews h2 {
-  padding-bottom: 50px;
+  margin-bottom: 50px;
+  padding-bottom: 5px;
+}
+
+.reviews figure {
+  width: 50%;
 }
 
 .reviews article div {
